# dpdk-based-nids

./: CMakeLists.txt  LICENSE  README.md
NetDefender/examples/: CMakeLists.txt  ids_demo.cpp
NetDefender/scripts/: build.sh
NetDefender/src/: CMakeLists.txt
NetDefender/src/analysis/: CMakeLists.txt
NetDefender/src/common/: CMakeLists.txt
NetDefender/src/core/: CMakeLists.txt
NetDefender/src/core/include/netdefender/: dpdk_init.h  ring_buffer.h
NetDefender/src/detection/: CMakeLists.txt
NetDefender/src/detection/include/netdefender/: ids_engine.hpp
conf/: dpvs.conf.single-nic.sample  netdefender.conf
examples/: CMakeLists.txt  capture_demo.c
scripts/: install.sh
src/: CMakeLists.txt  cfgfile.c  cfgfile.h  common.c  common.h  dpdk.h  global_data.c  global_data.h  list.h  main.c  netif.c  netif.h  parser.c  parser.h  pidfile.c  pidfile.h  scheduler.c  scheduler.h  timer.c  timer.h  utils.h  vector.h
src/core/: dpdk_capture.c
src/core/include/netdefender/: packet_capture.h
src/detection/include/netdefender/: pattern_matcher.hpp
